--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "axios": "^0.23.0",
     "exceljs": "^4.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-select": "^5.1.0",
+    "react-select-search": "^3.0.8",
     "react-textarea-autosize": "^8.3.3"
   },
   "browserslist": {
