--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^16.11.0",
+    "react-modal": "^3.14.3",
     "react-scripts": "3.2.0",
     "react-select": "^5.1.0",
-    "react-select-search": "^3.0.8",
     "react-textarea-autosize": "^8.3.3"
   },
   "browserslist": {
