--- a/package.json
+++ b/package.json
@@ -1,42 +1,48 @@
 {
-  "name": "inventory-management",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.23.0",
-    "exceljs": "^4.3.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "node-sass": "^4.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^16.11.0",
-    "react-modal": "^3.14.3",
-    "react-scripts": "3.2.0",
-    "react-select": "^5.1.0",
-    "react-textarea-autosize": "^8.3.3"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "inventory-management",
+	"version": "1.0.0",
+	"homepage": "https://leviethao.github.io/inventory-management/",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^0.23.0",
+		"exceljs": "^4.3.0",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.1",
+		"node-sass": "^4.0.0",
+		"react": "^17.0.2",
+		"react-dom": "^16.11.0",
+		"react-modal": "^3.14.3",
+		"react-scripts": "3.2.0",
+		"react-select": "^5.1.0",
+		"react-textarea-autosize": "^8.3.3"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"gh-pages": "^3.2.3"
+	}
 }
