--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"eject": "react-scripts eject",
 		"predeploy": "yarn build",
 		"deploy": "gh-pages -d build",
-
 		"install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
 		"compile-sass": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js src/assets/scss/blk-design-system-react.scss src/assets/css/blk-design-system-react.css",
 		"minify-sass": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js src/assets/scss/blk-design-system-react.scss src/assets/css/blk-design-system-react.min.css --output-style compressed",
@@ -23,35 +22,41 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^0.23.0",
-		"exceljs": "^4.3.0",
-		"lodash": "^4.17.21",
-		"react-modal": "^3.14.3",
-		"react-select": "^5.1.0",
-		"react-textarea-autosize": "^8.3.3",
-
+		"@emotion/react": "^11.8.1",
+		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.4.4",
+		"@mui/lab": "^5.0.0-alpha.70",
+		"@mui/material": "^5.4.3",
+		"@mui/styles": "^5.4.2",
 		"@testing-library/jest-dom": "5.11.6",
 		"@testing-library/react": "11.2.2",
 		"@testing-library/user-event": "12.2.2",
+		"axios": "^0.23.0",
 		"bootstrap": "4.5.3",
 		"chart.js": "2.9.4",
 		"classnames": "2.2.6",
+		"date-fns": "^2.28.0",
+		"exceljs": "^4.3.0",
 		"gulp": "4.0.2",
 		"gulp-append-prepend": "1.0.8",
+		"lodash": "^4.17.21",
 		"moment": "2.29.1",
 		"node-sass": "4.14.1",
 		"node-sass-package-importer": "5.3.2",
 		"nouislider": "14.6.3",
 		"perfect-scrollbar": "1.5.0",
+		"prop-types": "^15.8.1",
 		"react": "17.0.1",
 		"react-chartjs-2": "2.11.1",
 		"react-datetime": "3.0.4",
 		"react-dom": "17.0.1",
+		"react-modal": "^3.14.3",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.1",
+		"react-select": "^5.1.0",
+		"react-textarea-autosize": "^8.3.3",
 		"reactstrap": "8.7.1",
 		"web-vitals": "1.0.1"
-
 	},
 	"optionalDependencies": {
 		"jquery": "3.5.1",
