--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"react-select": "^5.1.0",
 		"react-textarea-autosize": "^8.3.3",
 		"reactstrap": "8.7.1",
+		"uuid": "^8.3.2",
 		"web-vitals": "1.0.1"
 	},
 	"optionalDependencies": {
