login, save login data to redux persit, logout, show login data on ui, only allow edit when has login

--- a/package.json
+++ b/package.json
@@ -51,11 +51,16 @@
 		"react-datetime": "3.0.4",
 		"react-dom": "17.0.1",
 		"react-modal": "^3.14.3",
+		"react-redux": "^7.2.6",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "4.0.1",
 		"react-select": "^5.1.0",
 		"react-textarea-autosize": "^8.3.3",
 		"reactstrap": "8.7.1",
+		"redux": "^4.1.2",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^6.0.0",
+		"redux-thunk": "^2.4.1",
 		"uuid": "^8.3.2",
 		"web-vitals": "1.0.1"
 	},
